fixing z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -115,7 +115,7 @@
   
       mask-image: radial-gradient(ellipse at 100% 0%, black 40%, transparent 70%);
   
-      pointer-events: none;
+      pointer-events: auto;
   }
   
   .jumbo::after {
